methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:5: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu);fairev()
                                 ^MethodsPicture:14: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu);fairev()
                                 ^MethodsPicture:23: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu);fairev()
                                 ^MethodsPicture:32: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu);fairev()
                                 ^MethodsPicture:41: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu);fairev()
                                 ^MethodsPicture:50: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu);fairev()
                                 ^MethodsPicture:59: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu);fairev()
                                 ^MethodsPicture:68: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu);fairev()
                                 ^MethodsPicture:77: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu);fairev()
                                 ^